azure/policies/calico.allow-kube-dns.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  # name: security.allow-kube-dns
  name: platform.allow-kube-dns
spec:
  # # requires security tier to exist
  # tier: security
  # requires platform tier to exist
  tier: platform
  order: 1000
  selector: all()
  types:
  - Egress
  egress:
  - action: Allow
    protocol: UDP
    source: {}
    destination:
      selector: "k8s-app == 'kube-dns'"
      ports:
      - '53'
