azure/policies/calico.default-ns.egress.yaml
# policy allows SSH access to Ubuntu VM
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default-ns-egress
spec:
  order: 1000
  selector: app in {'netshoot','ubuntu'}
  types:
  - Egress
  egress:
  - action: Allow
    protocol: TCP
    source: {}
    destination:
      namespaceSelector: "projectcalico.org/name == 'default'"
