azure/policies/calico.global-default-deny.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  order: 2000
  # target only these namespaces
  selector: projectcalico.org/namespace in {'default', 'uat', 'dev'}
  types:
  - Ingress
  - Egress
